Creating the Polipo2 fork

--- a/localindex.html
+++ b/localindex.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
  "http://www.w3.org/TR/html4/loose.dtd">
 <html><head>
-<title>Welcome to Polipo</title>
+<title>Welcome to Polipo2</title>
 </head><body>
-<h1>Welcome to Polipo</h1>
+<h1>Welcome to Polipo2</h1>
 
-<p><a href="doc/">The Polipo manual</a>.
+<p><a href="doc/">The Polipo2 manual</a>.
 
-<p><a href="polipo/">The configuration interface</a>.
+<p><a href="polipo2/">The configuration interface</a>.
 
 </body></html>
 
